2007-11-01  Andy Wingo  <wingo@pobox.com>

	* Makefile.am:
	* doc/: Add documentation, generated from upstream gtk-doc.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gconf.defs ("gconf_engine_get_for_addresses"):
	Ignore gconf-engine-notify-add.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-04  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gconf.defs (notify_add): Don't leave guile mode
	for this one.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gconf-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2005-04-10  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gconf-support.c: Use new SCM<->gpointer conversion
	macros.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* glib-checks.ac: 
	* defs-checks.ac: Versioned pkg-config check.

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-10-10  Andy Wingo  <wingo@pobox.com>

	* {arch}/=tagging-method: Untagged-source = unrecognized.

	* AUTHORS: Updated.

	* gnome/gw/gconf-spec.scm: Add custom wrapper for GConfValue. 
	(global-declarations-cg): Pull in the GConfClient headers.