@@ -1,0 +1,3 @@
+include ../../tests.mk
+
+wrapset_stem = gconf
